[package]
name = "near-old-stations"
version = "0.1.2"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
progress = "0.2.0"
regex = "1.3.1"
reqwest = "0.9.22"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
tiny_fail = "0.1.0"
toml = "0.5.3"
