[package]
name = "near-old-stations"
version = "0.3.0"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

default-run = "near-old-stations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
clap = "2.33"
flate2 = "1.0.12"
indicatif = "0.12.0"
regex = "1.3.1"
reqwest = "0.9.22"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
tiny_fail = "0.1.0"
toml = "0.5.3"

[[bin]]
name = "near-old-stations"
path = "src/main.rs"

[[bin]]
name = "stats"
path = "src/bin/stats.rs"